@@ -1,3 +1,8 @@
+2008-04-17  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
+
+	* jhbuild/utils/trayicon.py (TrayIcon.close): Don't break if the
+	process does not exists anymore. See #526745.
+
 2008-04-17  Murray Cumming  <murrayc@murrayc.com>
 
 	* modulesets/gnome-2.24.modules: Add ldtp.
